methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:8: error: not found: value getColourSol
    if (getColourSol()==Color.green){
        ^